dejamos listo los mapas de archivos css y js

--- a/src/components/songs-list.html
+++ b/src/components/songs-list.html
@@ -39,4 +39,44 @@
         <div class="artist">Artist name</div>
         <div class="title">Song title bla bla</div>
     </article>
+    <article class="song">
+        <img src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg" alt="artist song" class="cover">
+        <div class="artist">Artist name</div>
+        <div class="title">Song title bla bla</div>
+    </article>
+    <article class="song">
+        <img src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg" alt="artist song" class="cover">
+        <div class="artist">Artist name</div>
+        <div class="title">Song title bla bla</div>
+    </article>
+    <article class="song">
+        <img src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg" alt="artist song" class="cover">
+        <div class="artist">Artist name</div>
+        <div class="title">Song title bla bla</div>
+    </article>
+    <article class="song">
+        <img src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg" alt="artist song" class="cover">
+        <div class="artist">Artist name</div>
+        <div class="title">Song title bla bla</div>
+    </article>
+    <article class="song">
+        <img src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg" alt="artist song" class="cover">
+        <div class="artist">Artist name</div>
+        <div class="title">Song title bla bla</div>
+    </article>
+    <article class="song">
+        <img src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg" alt="artist song" class="cover">
+        <div class="artist">Artist name</div>
+        <div class="title">Song title bla bla</div>
+    </article>
+    <article class="song">
+        <img src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg" alt="artist song" class="cover">
+        <div class="artist">Artist name</div>
+        <div class="title">Song title bla bla</div>
+    </article>
+    <article class="song">
+        <img src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg" alt="artist song" class="cover">
+        <div class="artist">Artist name</div>
+        <div class="title">Song title bla bla</div>
+    </article>
 </section>
