--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -25,7 +25,7 @@ $color-lime: #D8E6B5;
 $main-text-color: $color-dirty-robin;
 $links-color: $color-la;
 
-// Responsive
+/// Responsive
 $mobile-portrait-width: 375px;
 $mobile-landscape-width: 667px;
 $tablet-portrait-width: 768px;
