--- a/src/scss/_responsive-utils.scss
+++ b/src/scss/_responsive-utils.scss
@@ -1,5 +1,5 @@
 @mixin if-mobile-landscape {
-    @media (max-width: #{$mobile-landscape-width}) {
+    @media (min-width: #{$mobile-portrait-width} + 1) {
         @content;
     }
 }
@@ -24,6 +24,18 @@
 
 @mixin if-tablet-portrait {
     @media (min-width: #{$tablet-portrait-width}){
+        @content;
+    }
+}
+
+@mixin if-tablet {
+    @include if-tablet-portrait() {
+        @content;
+    }
+}
+
+@mixin if-desktop {
+    @include if-tablet-landscape() {
         @content;
     }
 }
