primeros cambios de la app

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,3 +1,7 @@
-<header class="web-header">
-    <h1 class="web-title">Isaac Tunes</h1>
+<header class="mov-header">
+    <div class="mov-menu">
+        <div>imagen izda</div>
+        <div>logo</div>
+        <div> user e idiomas</div>
+    </div>
 </header>
